# ChangeLog for app-admin/supernova
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/supernova/ChangeLog,v 1.8 2014/11/01 20:29:55 alunduil Exp $

*supernova-1.0.7 (01 Nov 2014)

  01 Nov 2014; Alex Brandt <alunduil@gentoo.org> +supernova-1.0.7.ebuild:
  add version 1.0.7

*supernova-1.0.5 (27 Oct 2014)

  27 Oct 2014; Alex Brandt <alunduil@gentoo.org> +supernova-1.0.5.ebuild:
  add version 1.0.5

  21 Sep 2014; Alex Brandt <alunduil@gentoo.org> -supernova-1.0.1.ebuild,
  -supernova-1.0.3.ebuild:
  remove old version

*supernova-1.0.4 (13 Sep 2014)

  13 Sep 2014; Alex Brandt <alunduil@gentoo.org> +supernova-1.0.4.ebuild:
  bump to version 1.0.4

  27 Aug 2014; Michał Górny <mgorny@gentoo.org> supernova-1.0.3-r1.ebuild:
  Remove USE=bash-completion, install the completion file unconditionally
  following the Council decision.

*supernova-1.0.3-r1 (25 Aug 2014)

  25 Aug 2014; Alex Brandt <alunduil@gentoo.org> +supernova-1.0.3-r1.ebuild:
  add missing setuptools dependency

*supernova-1.0.3 (25 Aug 2014)

  25 Aug 2014; Alex Brandt <alunduil@gentoo.org> +supernova-1.0.3.ebuild:
  bump version to 1.0.3

*supernova-1.0.1 (03 Aug 2014)

  03 Aug 2014; Alex Brandt <alunduil@gentoo.org> +supernova-1.0.1.ebuild,
  +metadata.xml:
  New ebuild for supernova. Ebuild written by me.