@@ -1,30 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST supernova-1.0.3.tar.gz 17473 SHA256 09c540775dd167c0698ec0c8e44006982060b8c73f02c22478a054097b72b6c8 SHA512 0555119f67b9441451e4860c345e5e290fbf794ecb7ddd27f22449c7d14006765c8fede85610cb2c4f5faa04c941b92c838414b5fe7c39161fb3e54954d38be2 WHIRLPOOL fa0d0897f6aa02ada5f63c9b5bf3ae632391e00188849e32e3cde9263d893a1c54d6f748992c3328bf6f944d416d415eb70f2341663ad73625da948411ac08f0
 DIST supernova-1.0.4.tar.gz 17525 SHA256 3609ad00c218edc3a80455ae2ef50fe91c952d55532fb304e7d600c7c9e1c7ba SHA512 02c930a38ce8ea9d1049d8b9fcb01ced902fd64e40ebf528621b7cdef794b36546d9cf6f1ef9c97aa4ac060ac9a9daed2d2a364cecb4f217162f90f048768bcc WHIRLPOOL fbbe23596142008ae14ece769cc6e2d6b40b234eff0fc984b4c0487864a6fd15ddb2f288b53eca83c0d11798830696ae78f7db26e6425b9d47e13c729fd1acfc
 DIST supernova-1.0.5.tar.gz 17644 SHA256 c625799e1e91a9cb3acb2479c2d5ee2a38f03df1976b5ee7268986d72f4492ce SHA512 a35f804d4af08a56adb3dad7ad90fad0622b4f5defe6fa3c141ea6ed8362af798ac8a264c5ddbe5ac3b693adf342d21da096959d2d28e02faa1bbc1b548d2603 WHIRLPOOL 04165cf0c43afb7e734bf91a75a8c9f2dc21ca161c5a75f70f3c4d473e4697998f40b285ab1c7f32e454c5796ea209b8d578a9bd1d11f15ddd4e2ca063ee87fd
 DIST supernova-1.0.7.tar.gz 17783 SHA256 e0336590e8b4a73404acbfd7379285c631daf628baaba64c9f42d839982d9949 SHA512 54e98ab0a7f926b96dc2da62951cb552767515ae8a94ef88fbcf654db6079c91d6971b526663116e36bab795939605ec108aa39247e57c5dacfccbab4048b7d9 WHIRLPOOL b769f5c4b3d284eb17447b9b9d63b12bbcb8c8c87637ce8e6999d3bdf245f5b47194f9454e4b273c0b176b7fae5497346a0657d34ed335b8e7039cd273cb9fe0
-EBUILD supernova-1.0.3-r1.ebuild 1109 SHA256 3cf0632ceebaf88f6de7bd5fea3d0fa0879fb10f2408a5d45ae3cc46cdf22287 SHA512 0fbf75c0eb12aa8c657c1b2b5da6b9691ea59f8960b923c1f365e898418a9f6b4bf528afaab5d6457699eceebb51ac59ace225929bf61986253b65c6acbd0868 WHIRLPOOL 79b863a60bd05c15eb609d75e8f352eb7a5984b8c1b5fac153ced179213a569dec90a92ef68a950dd68e871d163a04b52c0bcef4de58f64b85fbfd2b83c08463
 EBUILD supernova-1.0.4.ebuild 1108 SHA256 0dbbe775e220da99b939b24b72f3a46cd57ed5badc5270337b80b01ff1981d1d SHA512 3eab3f37154ddd7c31ccd43aba39ae31de17cac34af3473a8e5687f7b2a50edd0bba6f57ae1364e1094d66d376d76242f6fa9bdff74508d8bfbc590cab4be1f0 WHIRLPOOL 25d749e4735bafee6525bf557ccf4aa6ea305a952c894d9d5f1de198cf006e399a8a3b9d6a03702c73086eb764e335a10b950202088fbdd79bad04047c680d01
 EBUILD supernova-1.0.5.ebuild 1061 SHA256 bc1e3af4d7f4f215c6fc0c11e91d9428c372a03a39fe3cdedaa939c316052e11 SHA512 69faa73f455dca6fd2e026a3a6a29fe02d207eb399daf78396ba5f12973a8f51a818e004388600446dc1ec0f96013ca4e5b665c09e8c8005b28baf70caaa4b71 WHIRLPOOL 7b89f92ec332cdf58c07d0dd167986fee82cec9325ddff1e6c73d828cc41d9400df9a09994b10cb9f9cf7d24bd77eaf8d06b012a6b413fef87199883687fd1b4
 EBUILD supernova-1.0.7.ebuild 1061 SHA256 7938fa143202ad0c4558095c98eaf0e033365932c0538a3c1f43e4b3a4db27bd SHA512 701464ece2c4afbee3931db5efeae1ae4af37096c1c5f255f1d9baef46bcd7a94eee51778d2979ef54cc770531cb243aa5347fa98ca01d149ed2cd970a4a0312 WHIRLPOOL e9ff0ce4f8557acdd678a3a97440ad0730d1e9e8cf271e9fd11e54e42355c663ce00e93bbc98865717f2d150fdd1aba4078b5623d8ebf27732fe11cb92c52583
-MISC ChangeLog 1360 SHA256 c6a9121cff2e8cd96ce270fe3ba40484b9758172b1e554d381e8bdb5109ea209 SHA512 a5c3a8fbb4660b1ee6a19de867f14f73d6b0c4ab960e036fb172d924d763228326c54d79c8cc2e1a9b375a768aa1be6defa1b8ed3f3d5b875404cf06def8bae4 WHIRLPOOL a319a47cfd0cecd47e55b261e5adbf4eac5d99d8798448259c6ffeacd3699d846795ed061e29eaaa0dbd4a659cb4242af098edd377582412ae0a7bd180b8414d
+MISC ChangeLog 1469 SHA256 7137b2ca6dbb0bfe6e69d89ff6f66279c1e8dfe39f4675f19f6a669d2f390cce SHA512 589add15b3210904e7a4f0356765e119f05094207befebf562f1ae79fe2aa4a9a0a24486448fc2abf7982db6e00b3dc3d5df6a48b544d5a9069efe4687e60f81 WHIRLPOOL f2d886bd73430c268898ec76c1c6c2eb464d4969bd0afa69908e11e785eeda1fd949b1f4c4eee6567b62d44b95a17127d2e7c597aa82ff6ed72d83b1bc1ff3a3
 MISC metadata.xml 281 SHA256 4f517e212ebf30022599267011b7d752fb61f1063c90f9d442242fba23e5207f SHA512 c4d7e9c37508015a286fc8288d3c201c5779aca1252bc6ed7f25ce87555b513817d4e3fa624255e7644b24e4db0e1b976ea34810ece8f718dac3b027a3e601ba WHIRLPOOL d144bd0785d423f05e5ff568d7c7c5b6f4aa6d651d44ec9f55dce23aafc6552d0d39f8229a612109665cfb3e839ff746e64c0cb0130fe93e9f231238c61a87ba
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUVULEAAoJECZUyt4RqCF8oGsQAKNvNhW6pVkipX1HXM0yrLXN
-WsY8OLskfsAh98jrQ3LnXlyZuCWp0PMMhBMszB1uVNaTGNei36iohJhJfvSrx7iA
-+zXaNjL85Uw+yOxkwrpPF1ye3fNio3twPaecc0w5MoEsmj/O33OnBn4mBeiCCMJy
-N9pW94MgW/09bng0wuZONffL+XhMnm+ySHQGLkgM8EHaFHhMHo/Q0rW+9ZoXmp6T
-cpdMMXqKjh09n28sOBmlwUSaQTx7Z/kIDxihe1we48GgjnAkZpA+ZnyH0xZ8COJW
-kZi2nPXXfiCwqHik7AcsfuRVosVQCDj0fvb/LZ3zzOxMk6mF2+Jpi9h+8LwdydST
-mVc9BpLlq7ubCCKZqzX+RRL5Dpo4LbLOWPLWBi341m3y2pS1zYIokEP0sY/Ji6cZ
-NKQA7mFrQmZolWTfmIYtBAGT6v/9OnY9DObM+Av7xa2NErmF82fNWD48yOKWR2Sj
-7gxvzK+TFBUVdFzAL3ywBf3q6B9snVhhfgi8BlFWbJNw11Pr1ygf1OO+DCBqbhep
-paiiRN5fX2vUnv9CDiS76PRZClT0sy1YZ0b9R/zTvjYlhJLfguy9m1OLH4HFE1aG
-HVDMkosyi0ijXy2JTU69EowEkWjvNlO+uyxXl9vtRuJqCC8oNkrkbC1Ceyk+DEZu
-zi26xkjA/9JGlJsYw+Wr
-=025H
+iQIcBAEBCAAGBQJUVUL0AAoJECZUyt4RqCF8SE0QAJRs+evDP+l/O0P0yZPlWKiD
+mYKA3xhn6lICv3rUdlQOZUzXaBeLxkgCbXMwaBTxNtV21TTihDgTQGTrPCE1nkwN
+tDIcJlZH9ebtwWZtgn6aL5r/QQ8bZYZQ008zwN1SJBVRh9YOrp+9YPexLyQZ1nqO
+fEqV5IXicw7pPDi5ePbSLqoIZvpBFCUrVj6IN46zLcW2VIVRsQ2Zl7cfoiRJH69n
+idttchBaCG9Z5FV8lpA3EO8dZSyMNdEmKcuBFHbiVd7PceicrG94YeUaXcshzlhk
+pfMstgcbOFIbLrwT1R23xXS8DR+Td/JRRMSZaUxBcXl+49LPnUZ8+O/1ms69nzoZ
+IT+zdafisCRRfSKZ77T1OL/lmSR3ty8bwZw53lRFTrw710J6+2SSBLYfi99K1Lxd
+dAb0PYL6a8ucJDerSQm3a6rQmDUV0x+FxQnTY7wBTFERiWWYQWd25AxE0BWxsEao
+tzyLle+f0Pzqm7v/qpSHxWNz12aTJL16gu9DQ7/QRdsoEXl65D8fv8vqF+mML5MD
+R1p/oT6XW7m3jeMSuy2PevN3GTN4G94U7ugCuENWgr/lLnVCWxXuDGFf5RCBd0bN
+9fZccV0DmlIxo8mGKF6wdigr94zEcb/P2Y8B/vGka1g+6Mqv6TZwYivh6r1WNGVS
+cyjPQzfstUdJCxX7XCu+
+=l4Qi
 -----END PGP SIGNATURE-----
