@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/supernova
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/supernova/ChangeLog,v 1.8 2014/11/01 20:29:55 alunduil Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/supernova/ChangeLog,v 1.9 2014/11/01 20:30:43 alunduil Exp $
+
+  01 Nov 2014; Alex Brandt <alunduil@gentoo.org> -supernova-1.0.3-r1.ebuild:
+  remove 1.0.3-r1—keep three
 
 *supernova-1.0.7 (01 Nov 2014)
 
